# dotfiles

./: .Xresources  .conkerorrc  .emacs  .ghci  .git.scmbrc  .gitconfig  .githelpers.sh  .gitignore  .inputrc  .screenrc  .surfraw.conf  .tmux.conf  .tmux.mac.conf  .xinitrc  .zprofile  README.md  Xresources  gitconfig  mpd.conf  rtorrent.rc  surfraw.conf  xinitrc
.emacs.d/: init.el
.i3/: config  conky  conkyrc  i3conky
config/: user-dirs.dirs
eclipse/: keys.epf  keys_osx.epf
emacs.d/: init.el  init_keybinding.el  init_linux_custom.el  init_look_and_feel.el  init_osx_custom.el
games/: autoexec.cfg
githooks/: commit-msg
i3/: config  conkyrc
jetbrains/: .ideavimrc  README.md
scripts/: README.md  clean_conky_mpd_output_for_i3bar.sh  delete_file_helper.sh  ethereum_helper_functions.sh  git_add_helper.sh  git_checkout_helper.sh  git_commit_helper.sh  git_helper_statusreader.sh  git_jira_ticket_prepender.sh  git_reset_helper.sh  git_status_helper.sh  helper_functions.sh  hilightconky.py  quick_edit.sh  refresher.py  weather.sh
scripts/docker/: README.md  dockertex
scripts/git_cli/: fixture.sh  git_branch_del.sh  git_list_branches.sh  test_branch_helper.sh
scripts/multi_programming_envs/: multi_project_runner.sh  multi_test_runner.sh  test_multi_test_runner.sh
scripts/multi_programming_envs/stack/: placeholder.cabal  stack.yaml
setup/: node_on_ubuntu.sh
terminator/: config
tmuxinator/: home.yml
vim/: README.md  vimrc
zsh/: .zprofile  .zshrc  aliases  mavenstuff  zpreztorc
zsh/aliases_files/: git  linux  svn
(+3 files in other folders)
