name:           placeholder
version:        0.1.0.0
license-file:   LICENSE
author:         Axel Hodler
maintainer:     axel@hodler.co
category:       Text
build-type:     Simple
cabal-version:  >=1.10

library
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.7 && <5
                    , hspec
                    , QuickCheck
  hs-source-dirs:     .
  default-language:   Haskell2010
